Ensure no gap for small screens on RH side

--- a/css/sitestyle.css
+++ b/css/sitestyle.css
@@ -172,7 +172,6 @@ div#profileText { margin-top: 1em; }
 
 /* ----- Main content ----- */
 div#content {
-  margin-left: 160px;
   padding: 0.5em 1.5em;
   max-width: 1024px;
   background: white;
